--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -616,7 +616,7 @@ div.section-one-row {
     top: 1450px;
     left: 170px;
 }
-input[type="text"] {
+input.email-inScroll {
     position: absolute;
     top: 1500px;
     left: 150px;
