--- a/assets/scss/_headwear.scss
+++ b/assets/scss/_headwear.scss
@@ -20,11 +20,12 @@
 	display: none;
     position: absolute;
     background: #fff;
-    top: -10px;
-    left: -5px;
+    top: -15px;
+    left: -15px;
     width: 100vw;
-    height: 390px;
+    height: 420px;
     z-index: 1;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     .top-menu {
     	display: flex;
     	.logo-menu {
@@ -38,11 +39,26 @@
 		    color: black;
 		}
     }
+a.menu-link {
+	flex-basis: 46%;
+	text-align: right;
+	color: #2A2A2A;
+	font-family: graphikblack;
+}
+a.menu-link:hover {
+	text-decoration: none;
+	text-shadow: 2px 2px 2px rgba(150, 150, 150, 0.84);
+	transition: ease;
+}
+i.menu-arrow {
+    font-size: 10px;
+    margin-left: 10px;
+}
     .menu-sections {
     	display: flex;
     	flex-direction: row;
     	justify-content: flex-start;
-    	margin-top: 50px;
+    	margin-top: 30px;
     	.menu-links {
     		flex-basis: 17.5%;
     		.linkList {
@@ -69,7 +85,29 @@
 	    	.special {
 	    		color: red;
 	    	}
+	    	a.link:hover {
+	    		text-decoration: none;
+	    	}
+	    	li:hover {
+	    		background-color: #E6E6E6;
+	    		transition: .1s ease;
+	    	}
 	    }
+	.your-menu {
+		flex-basis: 30%;
+		.your-hero {
+			width: auto;
+			height: 420px;
+			margin-top: -54px;
+			border-right: solid #f44336 50px;
+		}
+		.your-overlay {
+			background-color: black;
+			opacity: .3;
+			height: 420px;
+			width: auto;
+		}
+	}    
     }
 }
 
